--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,16 @@ dist/
 web-build/
 expo-env.d.ts
 
+# Node
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Env
+.env
+.env.local
+
 # Native
 .kotlin/
 *.orig.*
@@ -28,10 +38,8 @@ yarn-error.*
 
 # macOS
 .DS_Store
+Thumbs.db
 *.pem
-
-# local env files
-.env*.local
 
 # typescript
 *.tsbuildinfo
@@ -39,3 +47,7 @@ yarn-error.*
 # generated native folders
 /ios
 /android
+
+# IDE
+.vscode/
+.idea/
