--- a/app.json
+++ b/app.json
@@ -1,7 +1,8 @@
 {
   "expo": {
-    "name": "expo-mobile-CycleTracker",
-    "slug": "expo-mobile-CycleTracker",
+    "name": "Expo Mobile Cycle Tracker",
+    "slug": "expo-mobile-cycletracker",
+    "scheme": "cycletracker",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
@@ -25,6 +26,9 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-router"
+    ]
   }
 }
