--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "react-native-gesture-handler": "~2.28.0",
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
-    "react-native-screens": "~4.16.0"
+    "react-native-screens": "~4.16.0",
+    "react-native-svg": "^15.12.1",
+    "victory": "^37.3.6",
+    "victory-native": "^37.3.6"
   },
   "devDependencies": {
     "@types/react": "~19.1.0",
