--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-native-paper": "^5.14.5",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-svg": "^15.12.1",
+    "react-native-svg": "15.12.1",
     "victory": "^37.3.6",
     "victory-native": "^37.3.6"
   },
